--- a/application/Dockerfile
+++ b/application/Dockerfile
@@ -4,7 +4,7 @@
 ############################################################
 
 # Set the base image to Ubuntu
-FROM ubuntu
+FROM ubuntu:trusty
 
 # File Author / Maintainer
 MAINTAINER Maintaner Name
