Switch app to a simple Sinatra

--- a/application/Dockerfile
+++ b/application/Dockerfile
@@ -1,31 +1,35 @@
 ############################################################
-# Dockerfile to build Python WSGI Application Containers
+# Dockerfile to build a Sinatra Application
 # Based on Ubuntu
 ############################################################
 
 # Set the base image to Ubuntu
-FROM ubuntu:trusty
+FROM phusion/baseimage:0.9.18
 
 # File Author / Maintainer
-MAINTAINER Maintaner Name
+MAINTAINER Surfraz Ahmed
 
-# Add the application resources URL
-RUN echo "deb http://archive.ubuntu.com/ubuntu/ $(lsb_release -sc) main universe" >> /etc/apt/sources.list
+# Update local package indexes
+RUN apt-get update -y
 
-# Update the sources list
+# Install packages for building ruby
+RUN apt-get install -y --force-yes build-essential wget git
+RUN apt-get install -y --force-yes zlib1g-dev libssl-dev libreadline-dev libyaml-dev libxml2-dev libxslt-dev
+RUN apt-get clean
+
+# Install ruby repos (from brightbox)
+RUN apt-get install -y --force-yes software-properties-common
+RUN apt-add-repository ppa:brightbox/ruby-ng
 RUN apt-get update
 
-# Install basic applications
-RUN apt-get install -y tar git curl nano wget dialog net-tools build-essential
+RUN apt-get install -y --force-yes ruby2.2 ruby2.2-dev ruby-switch
+RUN ruby-switch --set ruby2.2
 
-# Install Python and Basic Python Tools
-RUN apt-get install -y python python-dev python-distribute python-pip
+RUN gem update --system
+RUN gem install bundler
 
 # Copy the application folder inside the container
 ADD /my_application /my_application
-
-# Get pip to download and install requirements:
-RUN pip install -r /my_application/requirements.txt
 
 # Expose ports
 EXPOSE 8080
@@ -33,7 +37,9 @@ EXPOSE 8080
 # Set the default directory where CMD will execute
 WORKDIR /my_application
 
+# Install required gems using bundler
+RUN bundle install
+
 # Set the default command to execute    
 # when creating a new container
-# i.e. using CherryPy to serve the application
-CMD python server.py
+CMD bundle exec rackup --port 8080 --host 0.0.0.0
